@@ -13,8 +13,9 @@
 // Flag to skip the computation of sequence statistics
 SKIP_STATS=0
 
-// Quality score from which to start truncating the 3' end of a read
-TRIM_QUAL=13
+//// Quality score from which to start truncating the 3' end of a read
+//TRIM_QUAL=13
+TRIM_QUAL=14
 // e.g. if you pick 16, all quality scores will be >=17 after truncation
 // Q20: 1% , Q19: 1.3%, Q18: 1.6%, Q17: 2%, Q16: 2.5%, Q15: 3.2%, Q14: 4%, Q13: 5%
 // Ambiguities such as N typically have Q0. A Q13 threshold will essentially
